<resources>
    <string name="app_name">FeedApp</string>
    <string name="scan">扫描</string>
    <string name="main_page_title">首页</string>
    <string name="question_page_title">问答</string>
    <string name="system_page_title">体系</string>
    <string name="me_page_title">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_course">新</string>
    <string name="author_example">扔物线</string>
    <string name="tag_example">项目</string>
    <string name="course_img">文章封面图</string>
    <string name="course_title">每日一问| 如何前置发现VerifyError相关问题？</string>
    <string name="course_desc">从开发效率来看，开发一个 单线程UI 库，会显得非常容易，而且，每个控件的运行效率肯定会比多线程的效率高，比如我们单线程可以使用HashMap，多线程就需要使用JUC 框架下的类库了，这个效率肯定比 HashMap低很多，这样就很好理解。编写一个多线程的UI库，很可能每个控件，都会加锁，控件本身效率就低了，但是这样还不够 ，后面会解释</string>
    <string name="top_tag">置顶</string>
    <string name="chapter_name">自助·广场Tab</string>
    <string name="banner_img">海报</string>
    <string name="dot_img">海报标记点</string>
    <string name="loading_failed">下载失败，点击重试</string>
    <string name="loading_finished">已全部加载完成</string>
    <string name="load_no_more">全部加载完成</string>
    <string name="load_more_failed">加载失败，点击重试</string>
</resources>