<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!--    这里是头部-->
    <LinearLayout
        android:id="@+id/page_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/btn_scan"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/scan"
            android:src="@drawable/main_scan" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/main_page_title"/>

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/search_icon"
            android:contentDescription="@string/scan" />
    </LinearLayout>

<!--    这里是内容-->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/divider"
        android:layout_below="@id/page_header" />

<!--这里是分割线-->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dfdfdf"
        android:layout_above="@id/page_navi"/>

<!--这里是导航栏-->
    <LinearLayout
        android:id="@+id/page_navi"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/navi_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/main_page_title"
                android:src="@drawable/ic_bottom_bar_home"
                app:tint="@color/tab_color_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@drawable/navi_title_color_selector"
                android:text="@string/main_page_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navi_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/menu_question_icon_selector"
                android:contentDescription="@string/question_page_title"
                app:tint="@color/tab_color_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/navi_title_color_selector"
                android:text="@string/question_page_title"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navi_system"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/menu_sys_icon_selector"
                android:contentDescription="@string/system_page_title"
                app:tint="@color/tab_color_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/navi_title_color_selector"
                android:text="@string/system_page_title"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navi_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_bottom_bar_mine"
                android:contentDescription="@string/me_page_title"
                app:tint="@color/tab_color_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/navi_title_color_selector"
                android:text="@string/me_page_title"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>